<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/noise_blue_repeat" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp">

        <TableRow
            android:id="@+id/start_date_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            >
            <TextView
                android:id="@+id/start_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/start_date"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/start_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_date"
                android:textSize="20sp"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:id="@+id/end_date_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/end_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/end_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_date"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/time_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_time"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:id="@+id/frequency_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/frequency_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frequency_text"
                android:textSize="20sp"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/frequency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_time"
                android:entries="@array/notification_options"
                android:textSize="20sp"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

    <TableRow
        android:id="@+id/cancel_set_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        >
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            style="@style/customBottomBar"
            android:layout_margin="10dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/setNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textStyle="bold"
            style="@style/customBottomBar"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

    </TableRow>

</RelativeLayout>