<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/noise_blue_repeat" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp">

        <TableRow
            android:id="@+id/startDateRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:text="@string/start_date"
                android:textSize="@dimen/header_dimen"/>

            <Button
                android:id="@+id/startDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_date"
                android:textSize="@dimen/header_dimen"/>
        </TableRow>

        <TableRow
            android:id="@+id/endDateRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_date"
                android:textSize="@dimen/header_dimen"/>

            <Button
                android:id="@+id/endDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_date"
                android:textSize="@dimen/header_dimen"/>
        </TableRow>

        <TableRow
            android:id="@+id/timeRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textSize="@dimen/header_dimen"/>

            <Button
                android:id="@+id/timeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_time"
                android:textSize="@dimen/header_dimen"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frequency_text"
                android:textSize="@dimen/header_dimen"/>

            <Spinner
                android:id="@+id/frequencySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_time"
                android:entries="@array/notification_options"
                android:textSize="@dimen/header_dimen"/>
        </TableRow>

    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            style="@style/customBottomBar"
            android:text="@string/cancel"
            android:textSize="@dimen/large_header_dimen"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/setNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            style="@style/customBottomBar"
            android:text="@string/set"
            android:textSize="@dimen/large_header_dimen"
            android:textStyle="bold"/>
    </TableRow>
</RelativeLayout>