<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/noise_blue_repeat">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="false"
        android:background="@drawable/noise_blue_repeat">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/senderRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/border_dimen"
                android:layout_marginStart="@dimen/border_dimen"
                android:layout_marginTop="@dimen/border_dimen"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_dimen"
                    android:text="@string/from"
                    />

                <Spinner
                    android:id="@+id/senderName"
                    android:layout_width="235dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/subjectRow"
                android:layout_below="@id/senderRow"
                android:layout_marginLeft="@dimen/border_dimen"
                android:layout_marginStart="@dimen/border_dimen"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/subject_title"
                    android:textSize="@dimen/body_dimen"/>

                <EditText
                    android:id="@+id/userNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:hint="@string/subject"
                    android:ems="12"
                    android:maxLines="1"
                    android:textSize="@dimen/body_dimen"/>
            </TableRow>

            <TableRow
                android:id="@+id/contactTypeRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subjectRow"
                android:layout_marginTop="@dimen/border_dimen_lg"
                android:layout_marginLeft="@dimen/border_dimen_lg"
                android:layout_marginStart="@dimen/border_dimen_lg">

            <TextView
                    android:text = "@string/type_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_dimen" />

                <Spinner
                    android:id="@+id/typeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/contactTypes"
                    android:focusable="false" />
            </TableRow>

            <EditText
                android:id="@+id/noteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contactTypeRow"
                android:gravity="top"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/border_dimen"
                android:layout_marginRight="@dimen/border_dimen"
                android:layout_marginLeft="@dimen/border_dimen"
                android:minHeight="200dp"
                android:maxLength="1000000000"
                android:background="#ffffff"
                android:hint="@string/note_prompt"/>

            <TableRow
                android:id="@+id/buttonRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/noteText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/border_dimen">

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/customBottomBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/border_dimen_lg"
                    android:layout_marginRight="@dimen/border_dimen_lg"
                    android:layout_marginEnd="@dimen/border_dimen_lg"
                    android:text="@string/cancel"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/submitButton"
                    style="@style/customBottomBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/border_dimen"
                    android:textStyle="bold"
                    android:text="@string/submit"/>
            </TableRow>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>